--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: flutter_e_comerce_app
 description: A new Flutter e-commerce project
 
-publish_to: "none" # Remove this line if you want to publish to pub.dev
+publish_to: "none"
 
 version: 1.0.0+1
 
@@ -15,15 +15,14 @@ dependencies:
   cached_network_image: ^3.3.0
   image_picker: ^1.1.1
   provider: ^6.0.5
-  shared_preferences: ^2.2.3 # versi stabil terbaru
+  shared_preferences: ^2.2.3
   animations: ^2.0.0
   google_fonts: ^4.0.3
   flutter_staggered_grid_view: ^0.6.2
   fluttertoast: ^8.2.1
-  badges: ^2.0.3
+  badges: ^3.0.0 # Update ke versi terbaru
   flutter_iconly: ^1.0.2
   intl: ^0.18.0
-  glassmorphism: ^3.0.0
 
 dev_dependencies:
   flutter_test:
@@ -33,4 +32,10 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   assets:
-    - assets/
+    - assets/jaket.jpg
+    - assets/s24ultra.jpg
+    - assets/sofa.png
+    - assets/nikejordan.jpg
+    - assets/bajuredbull.jpg
+    - assets/rolex.jpg
+    # - assets/profile.png
